--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "jquery.scrollto": "^1.4.12",
     "material-design-icons": "^3.0.1",
     "mousetrap": "^1.4.6",
-    "openseadragon": "^2.2.1",
+    "openseadragon": "2.2.1",
     "paper": "^0.10.2",
     "spectrum-colorpicker": "^1.8.0",
     "tinymce": "^4.1.7",
